@@ -12,6 +12,7 @@ sas-hide-clouds-and-fog=Hide clouds and fog
 sas-daytime=Daytime
 sas-anti-alias=Anti-alias
 sas-autozoom-target-px=Auto-zoom target screenshot size (px)
+sas-autozoom-always-start=Always reset to "Auto" zoom
 
 [mod-setting-description]
 sas-filetype=JPEG has smaller files, PNG is higher quality.
@@ -19,6 +20,7 @@ sas-jpg-quality=The JPEG render quality as a percentage (from 0% to 100%). A low
 sas-hide-clouds-and-fog=Hide cloud shadows on the ground, fog, and also foreground space dust. 
 sas-anti-alias=Render in double resolution and downscale the result. Makes things look less pixelated while keeping the resolution and filesize of the final screenshot the same. However the maximum resolution allowed is lowered to 8192x8192 instead of 16384x16384.
 sas-autozoom-target-px=Auto-zoom will try to get a screenshot as close as possible to this size.
+sas-autozoom-always-start=If checked, the zoom selection will always reset back to "Auto" when starting a new screenshot.\nIf unchecked, your zoom selection will be saved between screenshots.
 
 [string-mod-setting]
 sas-daytime-daytime=Always daytime
